# superspreadsheet

./: .gitignore  README.md
basic/: Makefile.am  Makefile.in  NEWS  aclocal.m4  configure  configure.ac
basic/autom4te.cache/: output.1  requests  traces.1
basic/src/: Makefile.am  Makefile.in  display_dims.cc  display_dims.h  display_info.cc  main.cc
basic/src/examples/: Makefile.am  Makefile.in
basic/src/examples/.deps/: labeledoptionmenu.Po  main.Po
basic/src/examples/infobar/: examplewindow.cc  examplewindow.h
basic/src/examples/window/: Makefile.am  examplewindow.h  labeledoptionmenu.cc  labeledoptionmenu.h
basic/src/old-code/: old.h
c/: spreadsheet.c
c++/: AUTHORS  Makefile.am  configure  configure.ac
c++/autom4te.cache/: output.0  traces.0  traces.1
c++/src/: .spreadsheet.h.swp  Makefile.am  Makefile.in  display_dims.cc  display_dims.h  display_info.h  main.cc  spreadsheet.cc  spreadsheet.h
c++/src/examples/.deps/: examplewindow.Po
c++/src/examples/infobar/: .examplewindow.cc.swp  .examplewindow.h.swp  Makefile.am  Makefile.in  main.cc
c++/src/examples/window/: Makefile.in  examplewindow.cc
c++/src/old-code/: old-main.cc  old.cc
refactoring/: Makefile.am  TODO  configure.ac
refactoring/src/: HeaderDims_In_PivotOrds.cc  HeaderDims_In_PivotOrds.h  List_uuid_entities.cc  List_uuid_entities.h  List_uuid_n_content.cc  List_uuid_n_content.h  Makefile.am  Pivot.cc  Pivot.h  TLobjects.cc  TLobjects.h  UpdatePivotOrds.cc  UpdatePivotOrds.h  ack  display_dims.cc  eqs  fact  fib  head  header  main.cc  spreadsheet.cc  spreadsheet.h
src/: Makefile  spreadsheet-2dims.c  spreadsheet.c
