
AC_PREREQ([2.65])
AC_INIT([Basic Cartesian Interfaces], [0.0])

# Checks for programs.
AM_INIT_AUTOMAKE
AC_PROG_CXX

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CONFIG_FILES([Makefile src/Makefile ])


AC_OUTPUT


