## The Cartesian SpreadSheet


ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

bin_PROGRAMS = spreadsheet

spreadsheet_SOURCES = spreadsheet.h spreadsheet.cc \
                      display_dims.h  display_dims.cc \
                      display_info.h  display_info.cc \
                      main.cc 
spreadsheet_LDFLAGS = -ltlsystem
AM_CXXFLAGS = -std=gnu++0x
